--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/SY/ZPSY.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/SY/ZPSY.css
@@ -14,7 +14,7 @@
 .div_body .div_body_top .div_body_top_left .ul_body_top_left .li_body_top_left .div_body_top_left_inner .p_body_top_left_inner_second .a_body_top_left_inner_second{cursor:pointer; width:150px;height:30px;display:inline-block;color:#000000;}
 .div_body .div_body_top .div_body_top_left .ul_body_top_left .li_body_top_left .div_body_top_left_inner .p_body_top_left_inner_second .a_body_top_left_inner_second:hover{color:#00bfe1;}
 .div_body .div_body_top .div_body_top_right{width:990px;height:920px;background-color:#ffffff;display:inline-block;float:left;}
-.div_body .div_body_top .div_body_top_right .p_body_top_right { width:100%;height:30px; display:inline-block;font-size:18px;font-weight:700;text-align:left;padding:5px 20px;margin-top:10px;}
+.div_body .div_body_top .div_body_top_right .p_body_top_right { width:100%;height:30px; display:inline-block;font-size:18px;font-weight:700;margin-top:10px;text-align: left;padding: 5px 20px;}
 .div_body .div_body_top .div_body_top_right .ul_body_top_right{padding:0;margin-bottom:0px;padding-left:10px;} 
 .div_body .div_body_top .div_body_top_right .ul_body_top_right .li_body_top_right{cursor:pointer;width:140px;height:40px;display:inline-block;float:left;padding:5px 10px;font-size:16px;}
 .div_body .div_body_top .div_body_top_right .ul_body_top_right .li_body_top_right:hover {text-decoration:underline;color:#00bfe1}
