--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/PFCGSY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/PFCGSY.cshtml
@@ -198,11 +198,11 @@
                 </ul>
                 <span class="span_body_top_right">安防设备</span>
                 <ul class="ul_body_top_right">
-                    <li class="li_body_top_right" onclick="OpenCXLB(76, '/PFCGCX/PFCGCX_AFSB', 'LB=436')">灭火器</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(76, '/PFCGCX/PFCGCX_AFSB', 'LB=436')">防火设备</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(76, '/PFCGCX/PFCGCX_AFSB', 'LB=436&XL=439')">报警器</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(76, '/PFCGCX/PFCGCX_AFSB', 'LB=437&XL=440')">交通安全设备</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(76, '/PFCGCX/PFCGCX_AFSB', 'LB=438&XL=441')">劳保用品</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(76, '/PFCGCX/PFCGCX_AFSB', 'LB=436&XL=439')">灭火器</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(76, '/PFCGCX/PFCGCX_AFSB', 'LB=436&XL=440')">防火设备</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(76, '/PFCGCX/PFCGCX_AFSB', 'LB=436&XL=441')">报警器</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(76, '/PFCGCX/PFCGCX_AFSB', 'LB=437')">交通安全设备</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(76, '/PFCGCX/PFCGCX_AFSB', 'LB=438')">劳保用品</li>
                     <li class="li_body_top_right" onclick="OpenCXLB(76, '/PFCGCX/PFCGCX_AFSB', 'LB=438&XL=458')">防护耳塞</li>
                     <li class="li_body_top_right" onclick="OpenCXLB(76, '/PFCGCX/PFCGCX_AFSB', 'LB=438&XL=4581')">防护耳罩</li>
                 </ul>
