--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZSJM/ZSJM_JJRY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZSJM/ZSJM_JJRY.cshtml
@@ -2,9 +2,9 @@
     Layout = "~/Areas/Business/Views/Shared/HTFB.cshtml";
 }
 @section Section_Head {
-    <link href="@Url.Content("~/Areas/Business/Css/HTFB/ZSJM/ZSJM_HBCP.css")" rel="stylesheet" />
-    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTFB/ZSJM/ZSJM_HBCP.js")"></script>
-    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTFB/ZSJM/ZSJM_HBCPYZ.js")"></script>
+    <link href="@Url.Content("~/Areas/Business/Css/HTFB/ZSJM/ZSJM_JJRY.css")" rel="stylesheet" />
+    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTFB/ZSJM/ZSJM_JJRY.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTFB/ZSJM/ZSJM_JJRYYZ.js")"></script>
 }
 @section Section_Body {
     <div id="myTabContent" class="div_content">
@@ -22,7 +22,7 @@
                 <div id="divBTTip"></div>
             </div>
         </div>
-        <div id="divCYLB" class="div_row" style="z-index: 999;">
+        <div id="divJJHBLB" class="div_row" style="z-index: 999;">
             <div class="div_row_left font_two">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">类别</span>
@@ -37,7 +37,7 @@
                     </div>
                 </div>
             </div>
-            <div id="divCYLBTip" class="Warn" style="z-index: 998;"></div>
+            <div id="divJJHBLBTip" class="Warn" style="z-index: 998;"></div>
         </div>
         <div id="divXL" class="div_row" style="z-index: 997; display: none;">
             <div class="div_row_left font_two">
@@ -68,7 +68,7 @@
             </div>
             <div id="divPPMCTip"></div>
         </div>
-        <div id="divCYTZJE" class="div_row" style="z-index: 993;">
+        <div id="divJJHBTZJE" class="div_row" style="z-index: 993;">
             <div class="div_row_left">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">投资金额</span>
@@ -83,9 +83,9 @@
                     </div>
                 </div>
             </div>
-            <div id="divCYTZJETip" class="Warn" style="z-index: 992;"></div>
+            <div id="divJJHBTZJETip" class="Warn" style="z-index: 992;"></div>
         </div>
-        <div id="divCYPPLS" class="div_row" style="z-index: 991;">
+        <div id="divCYPPLS" class="div_row" style="z-index: 992;">
             <div class="div_row_left">
                 <span class="span_required">&nbsp;</span>
                 <span class="spanFWCZ">品牌历史</span>
@@ -100,9 +100,8 @@
                     </div>
                 </div>
             </div>
-            <div id="divCYPPLSTip" class="Warn" style="z-index: 990;"></div>
         </div>
-        <div id="divCYQGFDS" class="div_row" style="z-index: 989;">
+        <div id="divCYQGFDS" class="div_row" style="z-index: 991;">
             <div class="div_row_left font_five">
                 <span class="span_required">&nbsp;</span>
                 <span class="spanFWCZ">全国分店数</span>
@@ -117,9 +116,8 @@
                     </div>
                 </div>
             </div>
-            <div id="divCYQGFDSTip" class="Warn" style="z-index: 988;"></div>
         </div>
-        <div id="divCYDDMJ" class="div_row" style="z-index: 987;">
+        <div id="divCYDDMJ" class="div_row" style="z-index: 990;">
             <div class="div_row_left">
                 <span class="span_required">&nbsp;</span>
                 <span class="spanFWCZ">单店面积</span>
@@ -134,9 +132,8 @@
                     </div>
                 </div>
             </div>
-            <div id="divCYDDMJTip" class="Warn" style="z-index: 986;"></div>
         </div>
-        <div id="divPPMS" class="div_row" style="margin-top: 22px; z-index: 985;">
+        <div id="divPPMS" class="div_row" style="margin-top: 22px; z-index: 989;">
             <div class="div_row_left">
                 <span class="span_required">&nbsp;</span>
                 <span id="spanPPMS">品牌描述</span>
@@ -146,38 +143,38 @@
                 <div id="divPPMSTip"></div>
             </div>
         </div>
-        <div id="divFWFW" class="div_row" style="z-index: 984;">
+        <div id="divFWFW" class="div_row" style="z-index: 988;">
             <div class="div_row_left">
                 <span class="span_required">*</span>
                 <span id="spanFWFW">服务范围</span>
             </div>
             <div id="divFWFWText" class="div_row_right">
             </div>
-            <div id="divFWFWTip" class="Warn" style="z-index: 983;"></div>
+            <div id="divFWFWTip" class="Warn" style="z-index: 987;"></div>
         </div>
-        <div id="divJYMS" class="div_row" style="z-index: 982;">
+        <div id="divJYMS" class="div_row" style="z-index: 986;">
             <div class="div_row_left">
                 <span class="span_required">&nbsp;</span>
                 <span id="spanJYMS">经营模式</span>
             </div>
             <div id="divJYMSText" class="div_row_right">
             </div>
-            <div id="divJYMSTip" class="Warn" style="z-index: 981;"></div>
+            <div id="divJYMSTip" class="Warn" style="z-index: 985;"></div>
         </div>
-        <div id="divSHRQ" class="div_row" style="z-index: 980;">
+        <div id="divSHRQ" class="div_row" style="z-index: 984;">
             <div class="div_row_left">
                 <span class="span_required">&nbsp;</span>
                 <span id="spanSHRQ">适合人群</span>
             </div>
             <div id="divSHRQText" class="div_row_right">
             </div>
-            <div id="divSHRQTip" class="Warn" style="z-index: 979;"></div>
+            <div id="divSHRQTip" class="Warn" style="z-index: 983;"></div>
         </div>
         <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
             <span class="span_split">加盟项目描述</span>
             <em class="em_split"></em>
         </div>
-        <div id="divBCMS" class="div_row" style="height: 253px; z-index: 978;">
+        <div id="divBCMS" class="div_row" style="height: 253px; z-index: 982;">
             <div class="div_row_left" style="height: 170px; vertical-align: top;">
                 <span class="span_required" style="vertical-align: top">*</span>
                 <span id="spanBCMS" style="vertical-align: top">加盟介绍</span>
