--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/ZSJMSY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/ZSJMSY.cshtml
@@ -2,7 +2,7 @@
     Layout = "~/Areas/Business/Views/Shared/SY.cshtml";
 }
 @section Section_Head {
-    <link href="@Url.Content("~/Areas/Business/Css/SY/ZSJMSY.css")" rel="stylesheet" />环保产品
+    <link href="@Url.Content("~/Areas/Business/Css/SY/ZSJMSY.css")" rel="stylesheet" />
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/SY/ZSJMSY.js")"></script>
 }
 @section Section_Body {
