--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/SY/SWFWSY.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/SY/SWFWSY.css
@@ -8,7 +8,7 @@
 .div_body .div_body_top .div_body_top_left .ul_body_top_left .li_body_top_left{width:100%;height:60px;text-align:center;cursor:pointer;padding-top:5px;font-size:16px;}
 .div_body .div_body_top .div_body_top_left .ul_body_top_left .li_body_top_left:hover {text-decoration:underline;color:#d323e1}
 .div_body .div_body_top .div_body_top_right{width:990px;height:1750px;background-color:#ffffff;display:inline-block;float:left;}
-.div_body .div_body_top .div_body_top_right .p_body_top_right { width:100%;height:30px; display:inline-block;font-size:18px;font-weight:700;margin-top:10px;padding-top:5px;padding-right: 30px;text-align:right;}
+.div_body .div_body_top .div_body_top_right .p_body_top_right { width:100%;height:30px; display:inline-block;font-size:18px;font-weight:700;margin-top:10px;padding: 5px 20px; text-align:left;}
 .div_body .div_body_top .div_body_top_right .ul_body_top_right{padding:0;margin-bottom:0px;padding-left:10px;} 
 .div_body .div_body_top .div_body_top_right .ul_body_top_right .li_body_top_right{cursor:pointer;width:140px;height:30px;display:inline-block;float:left;padding:5px 10px;}
 .div_body .div_body_top .div_body_top_right .ul_body_top_right .li_body_top_right:hover {text-decoration:underline;color:#d323e1}
