--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/CWSY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/CWSY.cshtml
@@ -61,18 +61,18 @@
                 <ul class="ul_body_top_right">
                     <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'LB=117')">观赏鱼</li>
                     <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'LB=118')">玩赏鸟</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'LB=118')">八哥</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'LB=118')">鹦鹉</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'LB=120')">兔子</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'LB=120')">龟</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'LB=120')">仓鼠</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'LB=120')">荷兰猪</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'LB=120')">蟋蟀</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'LB=120')">蜗牛</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'LB=120')">螃蟹</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'LB=120')">蛙</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'LB=120')">松鼠</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'LB=120')">龙猫</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'LB=118&XL=138')">八哥</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'LB=118&XL=135')">鹦鹉</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'LB=120&XL=147')">兔子</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'LB=120&XL=148')">龟</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'LB=120&XL=149')">仓鼠</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'LB=120&XL=151')">荷兰猪</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'LB=120&XL=152')">蟋蟀</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'LB=120&XL=153')">蜗牛</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'LB=120&XL=154')">螃蟹</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'LB=120&XL=155')">蛙</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'LB=120&XL=156')">松鼠</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(33, '/CWCX/CWCX_HNYC', 'LB=120&XL=157')">龙猫</li>
                 </ul>
                 <p class="span_body_top_right">宠物服务</p>
                 <ul class="ul_body_top_right">
