--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SHFWSY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SHFWSY.cshtml
@@ -292,10 +292,10 @@
                 <span class="span_body_top_right">婚纱礼服</span>
                 <ul class="ul_body_top_right">
                     <li class="li_body_top_right" onclick="OpenCXLB(143, '/HQSYCX/HQSYCX_HSLF', 'LX=90')">婚纱</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(143, '/HQSYCX/HQSYCX_HSLF', 'LB=91')">旗袍</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(143, '/HQSYCX/HQSYCX_HSLF', 'LB=92')">晚礼服</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(143, '/HQSYCX/HQSYCX_HSLF', 'LB=93')">伴娘服</li>
-                    <li class="li_body_top_right" onclick="OpenCXLB(143, '/HQSYCX/HQSYCX_HSLF', 'LB=94')">男士礼服</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(143, '/HQSYCX/HQSYCX_HSLF', 'LX=91')">旗袍</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(143, '/HQSYCX/HQSYCX_HSLF', 'LX=92')">晚礼服</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(143, '/HQSYCX/HQSYCX_HSLF', 'LX=93')">伴娘服</li>
+                    <li class="li_body_top_right" onclick="OpenCXLB(143, '/HQSYCX/HQSYCX_HSLF', 'LX=94')">男士礼服</li>
                     <li class="li_body_top_right" onclick="OpenCXLB(143, '/HQSYCX/HQSYCX_HSLF', 'CZ=95')">蕾丝</li>
                     <li class="li_body_top_right" onclick="OpenCXLB(143, '/HQSYCX/HQSYCX_HSLF', 'CZ=96')">纺丝</li>
                     <li class="li_body_top_right" onclick="OpenCXLB(143, '/HQSYCX/HQSYCX_HSLF', 'CZ=97')">真丝</li>
