--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/Head.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/Head.css
@@ -36,8 +36,8 @@
 /*首页_隐藏头部*/
 .div_head_hide{ width: 100%;height: 50px;background-color: #ad5b97;position: fixed;top: 0;opacity: 0.9;display: none;z-index: 1001;}
 .div_head_hide .img_head_hide_logo{ width: 80px;height: 40px;font-size: 26px;font-weight: 700;color: #ffffff;margin-left: 140px;}
-.div_head_hide .div_head_hide_left {float: left;width: 25%;margin-top: 4px;}
-.div_head_hide .div_head_hide_right {float: left;width: 75%;margin-top: 4px;}
+.div_head_hide .div_head_hide_left {float: left;margin-top: 4px;}
+.div_head_hide .div_head_hide_right {float: left;margin-top: 4px;margin-left: 20px;margin-left: 130px}
 .div_head_hide_right .div_head_hide_right_ss {display: inline-block;width: 600px;height: auto;float: left;}
 .div_head_hide_right .div_head_hide_right_ss .span_spaninput_out {border: none;display: block;width: 630px;height: 40px;font-size: 14px;}
 .div_head_hide_right .div_head_hide_right_ss .span_spaninput_out .span_spaninput_in {border: 1px solid #fff; display: inline-block;width: 500px;height: 40px;font-size: 14px;padding: 6px 12px;}
