--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
@@ -142,8 +142,8 @@
         <div class="div_foot_right">
             <p class="p_div_foot_right">服务支持</p>
             <ul class="ul_div_foot_right">
-                <li class="li_div_foot_right"><a class="a_div_foot_right">用户协议</a></li>
-                <li class="li_div_foot_right"><a class="a_div_foot_right">先行赔付</a></li>
+                <li class="li_div_foot_right"><a class="a_div_foot_right">用户服务协议</a></li>
+                <li class="li_div_foot_right"><a class="a_div_foot_right">现金服务协议</a></li>
                 <li class="li_div_foot_right"><a class="a_div_foot_right">诚信建设</a></li>
                 <li class="li_div_foot_right"><a class="a_div_foot_right">举报平台</a></li>
             </ul>
@@ -153,13 +153,13 @@
             <ul class="ul_div_foot_right">
                 <li class="li_div_foot_right"><a class="a_div_foot_right" href="http://localhost/infotownlet/Business/BZZX/BZZX?TYPE=CJWT">常见问题</a></li>
                 <li class="li_div_foot_right"><a class="a_div_foot_right" href="http://localhost/infotownlet/Business/BZZX/BZZX?TYPE=LXKF">联系客服</a></li>
-                <li class="li_div_foot_right"><a class="a_div_foot_right" href="http://localhost/infotownlet/Business/BZZX/BZZX?TYPE=YJFK">意见反馈</a></li>
+                <li class="li_div_foot_right"><a class="a_div_foot_right" href="http://localhost/infotownlet/Business/BZZX/BZZX?TYPE=YJFK">网站建议</a></li>
             </ul>
         </div>
         <p class="p_div_foot_bottom"></p>
     </div>
     <div class="div_bottom">
-        <p class="p_div_bottom">©2017 福建沐晗信息技术有限公司 客服电话：400-036-3432 | 021-6430110（周一至周日，9:00-18:00）</p>
+        <p class="p_div_bottom">©2018 福建沐晗信息技术有限公司 客服电话：400-036-3432 | 021-6430110（周一至周日，9:00-18:00）</p>
         <p class="p_div_bottom reduce">闽ICP备06019413号 | 闽ICP证B2-20080088 | 闽公网安备31010402000116号</p>
     </div>
 }
