--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/QT.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/QT.cshtml
@@ -11,6 +11,9 @@
     <script src=@Url.Content("~/Areas/Business/Scripts/underscore.min.js")></script>
     <link href=@Url.Content("~/Areas/Business/Css/Common/PageCommon.css") rel="stylesheet" />
 
+    <link href="@Url.Content("~/Areas/Business/Css/Common/Top.css")" rel="stylesheet" />
+    <script src="@Url.Content("~/Areas/Business/Scripts/Business/Common/Top.js")"></script>
+
     <link href="@Url.Content("~/Areas/Business/Css/Common/XZQ.css")" rel="stylesheet" />
     <script src="@Url.Content("~/Areas/Business/Scripts/Business/Common/XZQ.js")"></script>
 
