--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_ZZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_ZZF.cshtml
@@ -38,7 +38,8 @@
             <div class="div_row_right">
                 <div class="div_select_out" style="z-index: 1000; width: 595px; border:none">
                     <div id="divXQMCText" class="div_select_in SRK" style="border: none; width: 100%;">
-                        <input id="XQMC" maxlength="30" column="XQMC" class="span_spaninput SRK" style="width: 594px; margin-top: 0px; padding: 4px 12px;" type="text" placeholder="请输入小区名称" />
+                        <input id="XQMC" maxlength="30" column="XQMC" class="span_spaninput SRK" style="width: 594px; margin-top: 0px; padding: 4px 12px;" type="text" placeholder="请输入小区名称"/>
+                        <input id="XQDZ" type="hidden" />
                     </div>
                     <div id="divXQMClist" class="div_select_dropdown" style="width: 594px;">
                     </div>
