--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/HTGL/WDZJ/WDXJ_CZ.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/HTGL/WDZJ/WDXJ_CZ.css
@@ -40,7 +40,7 @@
 
 .span_main_info_tip {color: #bc6ba6;}
 
-.img_select {width: 20px;height: 20px;display: inline-block;position: absolute;bottom: 0;right: 0;}
+.img_select {width: 20px;height: 20px;display: inline-block;position: relative;bottom: -13px;right: 0;float: right;}
 
 .input_main_info_ljzf {position: absolute;font-size: 14px;width: 135px;height: 40px;cursor: pointer;background-color: #ad5b97;z-index: 102;color: #fff;border-radius: 4px;border: none;cursor: pointer;}
 
