--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/HTFB.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/HTFB.cshtml
@@ -153,7 +153,9 @@
                         <td style="text-align: left">
                             <input id="checkMMSFZDDL" type="checkbox" />
                             <span class="spanZDDD">下次自动登录</span>
-                            <a id="aWJMM">忘记密码</a>
+                            <a class="spanWJMM" id="aWJMM">忘记密码</a>
+                            <a class="spanSplit">|</a>
+                            <a class="spanYHZC" id="aYHZC1">用户注册</a>
                         </td>
                     </tr>
                     <tr>
