--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/SY.cshtml
@@ -63,7 +63,7 @@
         <div class="div_head_right">
             <div class="div_head_right_ss">
                 <span id="spanXSLC" class="span_spaninput_out SRK">
-                    <input id="SS" class="span_spaninput_in" type="text" placeholder="搜索 房子/车子/工作/服务" />
+                    <input id="SS" class="form-control span_spaninput_in" type="text" placeholder="搜索 房子/车子/工作/服务" />
                     <input type="hidden" id="LBID" />
                     <input type="hidden" id="URL" />
                     <input type="hidden" id="CONDITION" />
@@ -81,7 +81,7 @@
         <div class="div_head_hide_right">
             <div class="div_head_hide_right_ss">
                 <span id="spanHideXSLC" class="span_spaninput_out SRK">
-                    <input id="HideSS" class="span_spaninput_in" type="text" placeholder="搜索 房子/车子/工作/服务" />
+                    <input id="HideSS" class="form-control span_spaninput_in" type="text" placeholder="搜索 房子/车子/工作/服务" />
                     <input type="hidden" id="HideLBID" />
                     <input type="hidden" id="HideURL" />
                     <input type="hidden" id="HideCONDITION" />
