--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/Head.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/Head.css
@@ -11,7 +11,7 @@
 .div_head_right .ul_head_right .li_head_right {width: 130px;color: white;height: 40px;font-size: 16px;display: inline;margin-left: 30px;cursor: pointer;}
 .div_head_right .div_head_right_ss {display: inline-block;width: 600px;height: 80px;float: left;margin-left: 150px;}
 .div_head_right .div_head_right_ss .span_spaninput_out {border: none;display: block;width: 630px;height: 40px;font-size: 14px;margin-top: 10px;margin-bottom: 10px;}
-.div_head_right .div_head_right_ss .span_spaninput_out .span_spaninput_in {border: 2px solid #bc6ba6;display: inline-block;width: 500px;height: 40px;font-size: 14px;padding: 6px 12px;}
+.div_head_right .div_head_right_ss .span_spaninput_out .span_spaninput_in {border: 2px solid #bc6ba6;display: inline-block;width: 500px;height: 40px;font-size: 14px;padding: 6px 12px;border-radius: 0 !important; }
 .div_head_right .div_head_right_ss .span_head_right_ss {font-size: 14px;color: #999;cursor: pointer;margin-left: 4px;}
 .div_head_right .div_head_right_ss .span_head_right_ss:hover {color: #ad5b97;text-decoration: underline;}
 .div_head_right .div_head_right_ss .span_head_right_ss_split{ color: #999999;margin: 0 7px;}
@@ -34,13 +34,13 @@
 .li_select:hover {background: #ececec;color: #333333;}
 
 /*首页_隐藏头部*/
-.div_head_hide{ width: 100%;height: 50px;background-color: #ad5b97;position: fixed;top: 0;opacity: 0.9;display: none;z-index: 1001;}
+.div_head_hide{ width: 100%;height: 50px;overflow: hidden; background-color: #ad5b97;position: fixed;top: 0;opacity: 0.9;display: none;z-index: 1001;}
 .div_head_hide .img_head_hide_logo{ width: 80px;height: 40px;font-size: 26px;font-weight: 700;color: #ffffff;margin-left: 140px;}
 .div_head_hide .div_head_hide_left {float: left;margin-top: 4px;}
 .div_head_hide .div_head_hide_right {float: left;margin-top: 4px;margin-left: 20px;margin-left: 130px}
 .div_head_hide_right .div_head_hide_right_ss {display: inline-block;width: 600px;height: auto;float: left;}
 .div_head_hide_right .div_head_hide_right_ss .span_spaninput_out {border: none;display: block;width: 630px;height: 40px;font-size: 14px;}
-.div_head_hide_right .div_head_hide_right_ss .span_spaninput_out .span_spaninput_in {border: 1px solid #fff; display: inline-block;width: 500px;height: 40px;font-size: 14px;padding: 6px 12px;}
+.div_head_hide_right .div_head_hide_right_ss .span_spaninput_out .span_spaninput_in {border: 1px solid #fff; display: inline-block;width: 500px;height: 40px;font-size: 14px;padding: 6px 12px;border-radius: 0 !important;}
 .div_head_hide_right .div_head_hide_right_ss .span_head_hide_right_ss {font-size: 14px;color: #999;cursor: pointer;margin-left: 4px;}
 .div_head_hide_right .div_head_hide_right_ss .span_head_hide_right_ss:hover {color: #ad5b97;text-decoration: underline;}
 .div_head_hide_right .div_head_hide_right_ss .span_head_hide_right_ss_split{ color: #999999;margin: 0 7px;}
