--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/XXXX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/XXXX.cshtml
@@ -58,7 +58,7 @@
         <div class="div_head_right">
             <div class="div_head_right_ss">
                 <span id="spanXSLC" class="span_spaninput_out SRK">
-                    <input id="SS" class="span_spaninput_in" type="text" placeholder="搜索 房子/车子/工作/服务" />
+                    <input id="SS" class="form-control span_spaninput_in" type="text" placeholder="搜索 房子/车子/工作/服务" />
                     <input type="hidden" id="LBID" />
                     <input type="hidden" id="URL" />
                     <input type="hidden" id="CONDITION" />
