--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
@@ -160,6 +160,6 @@
     </div>
     <div class="div_bottom">
         <p class="p_div_bottom">©2018 福建沐晗信息技术有限公司 客服电话：13675017762（周一至周日，8:00-22:00）</p>
-        <p class="p_div_bottom reduce">闽ICP备18003746号 | 闽公网安备31010402000116号</p>
+        <p class="p_div_bottom reduce">闽ICP备18003746号</p>
     </div>
 }
