--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_QCPJ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_QCPJ.cshtml
@@ -31,7 +31,7 @@
             </div>
             <div id="divLBTip" class="Warn" style="z-index: 998;"></div>
         </div>
-        <div id="divJG" class="div_row" style="z-index: 992;">
+        @*<div id="divJG" class="div_row" style="z-index: 992;">
             <div class="div_row_left font_two">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">价格</span>
@@ -43,7 +43,7 @@
                     </span>
             </div>
             <div id="divJGTip" class="Warn" style="z-index: 992;"></div>
-        </div>
+        </div>*@
         <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
             <span class="span_split">详细信息</span>
             <em class="em_split"></em>
