--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_XZL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_XZL.cshtml
@@ -246,7 +246,7 @@
                 <div id="divTPTip" class="Warn"></div>
             </div>
         </div>
-        <div id="divFWZPValue" class="div_row_zp" style="display: none;">
+        <div id="divFWZPValue" class="div_row_zp div_row_zp_value">
             <div class="div_row_left">
                 <span class="span_required"></span>
                 <span class="span_row_left_fwzp"></span>
