--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW/CW_CWM.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW/CW_CWM.cshtml
@@ -204,7 +204,7 @@
                 <div id="divLXDHTip"></div>
             </div>
         </div>
-        <div id="divQQ" class="div_row" style="" style="z-index: 993">
+        <div id="divQQ" class="div_row"  style="z-index: 993">
             <div class="div_row_left font_three">
                 <span class="span_required">&nbsp;</span>
                 <span id="spanQQ">微信号</span>
