--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SWFW/SWFW_FYSJ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SWFW/SWFW_FYSJ.cshtml
@@ -28,7 +28,7 @@
                 <span class="spanFWCZ">服务项目</span>
             </div>
             <div class="div_row_right">
-                <div id="divLBText" class="div_select_out SRK" style="">
+                <div id="divLBText" class="div_select_out SRK" >
                     <div id="divLBSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                         <input type="hidden" id="LBID" />
                         <span id="spanLB" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择类别</span>
@@ -45,7 +45,7 @@
                 <span class="span_required">*</span>
                 <span id="spanXL">类型</span>
             </div>
-            <div id="divXLText" class="div_row_right" style="">
+            <div id="divXLText" class="div_row_right" >
             </div>
             <div id="divXLTip"></div>
         </div>
@@ -84,7 +84,7 @@
                 <span class="span_required">&nbsp;</span>
                 <span id="spanZYLY">专业领域</span>
             </div>
-            <div id="divZYLYText" class="div_row_right" style="">
+            <div id="divZYLYText" class="div_row_right" >
             </div>
         </div>
         <div id="divWJLX" class="div_row" style="z-index: 994;">
@@ -92,7 +92,7 @@
                 <span class="span_required">&nbsp;</span>
                 <span id="spanWJLX">文件类型</span>
             </div>
-            <div id="divWJLXText" class="div_row_right" style="">
+            <div id="divWJLXText" class="div_row_right" >
             </div>
         </div>
         <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
