--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_MTC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_MTC.cshtml
@@ -197,7 +197,7 @@
                 <div id="divLXDHTip"></div>
             </div>
         </div>
-        <div id="divQQ" class="div_row" style="" style="z-index: 978">
+        <div id="divQQ" class="div_row"  style="z-index: 978">
             <div class="div_row_left font_three">
                 <span class="span_required">&nbsp;</span>
                 <span id="spanQQ">微信号</span>
