--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_SJSM_ESSJ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_SJSM_ESSJ.cshtml
@@ -29,7 +29,7 @@
         </div>
         <div id="divPPYXH" class="div_row" style="z-index: 999">
             <div class="div_row_left font_five">
-                <span class="span_required">*</span>
+                <span class="span_required">&nbsp;</span>
                 <span class="spanFWCZ">品牌与型号</span>
             </div>
             <div class="div_row_right">
@@ -55,7 +55,7 @@
         </div>
         <div id="divXJCD" class="div_row" style="z-index: 996;">
             <div class="div_row_left font_two">
-                <span class="span_required">*</span>
+                <span class="span_required">&nbsp;</span>
                 <span class="spanFWCZ">新旧</span>
             </div>
             <div class="div_row_right">
@@ -72,7 +72,7 @@
         </div>
         <div id="divJG" class="div_row" style="z-index: 994;">
             <div class="div_row_left font_two">
-                <span class="span_required">*</span>
+                <span class="span_required">&nbsp;</span>
                 <span class="spanFWCZ">价格</span>
             </div>
             <div class="div_row_right">
@@ -93,7 +93,7 @@
         </div>
         <div id="divSZQY" class="div_row" style="z-index: 991;">
             <div class="div_row_left">
-                <span class="span_required">*</span>
+                <span class="span_required">&nbsp;</span>
                 <span class="spanFWCZ">交易地址</span>
             </div>
             <div class="div_row_right">
@@ -213,7 +213,7 @@
                 <div id="divLXDHTip"></div>
             </div>
         </div>
-        <div id="divQQ" class="div_row" style="" style="z-index: 993">
+        <div id="divQQ" class="div_row"  style="z-index: 993">
             <div class="div_row_left font_three">
                 <span class="span_required">&nbsp;</span>
                 <span id="spanQQ">微信号</span>
