--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_ZZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC/FC_ZZF.cshtml
@@ -273,7 +273,7 @@
                 <div id="divLXDHTip"></div>
             </div>
         </div>
-        <div id="divQQ" class="div_row" style="" style="z-index: 993">
+        <div id="divQQ" class="div_row"  style="z-index: 993">
             <div class="div_row_left font_three">
                 <span class="span_required">&nbsp;</span>
                 <span>微信号</span>
