--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HQSY/HQSY_HLGP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HQSY/HQSY_HLGP.cshtml
@@ -28,7 +28,7 @@
                 <span class="spanFWCZ">跟拍类型</span>
             </div>
             <div class="div_row_right">
-                <div id="divGPLXText" class="div_select_out SRK" style="">
+                <div id="divGPLXText" class="div_select_out SRK" >
                     <div id="divGPLXSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                         <span id="spanGPLX" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择跟拍类型</span>
                         <div class="span_select_arrow"></div>
@@ -220,7 +220,7 @@
                 <div id="divLXDHTip"></div>
             </div>
         </div>
-        <div id="divQQ" class="div_row" style="" style="z-index: 986">
+        <div id="divQQ" class="div_row"  style="z-index: 986">
             <div class="div_row_left font_three">
                 <span class="span_required">&nbsp;</span>
                 <span id="spanQQ">微信号</span>
