--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/QZZP/QZZP_JZZP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/QZZP/QZZP_JZZP.cshtml
@@ -215,7 +215,7 @@
             <input column="XXDZ" class="span_spaninput input_input SRK" type="text" placeholder="请输入详细地址"/>
         </div>
     </div>
-    <div id="divQQ" class="div_row" style="" style="z-index: 985">
+    <div id="divQQ" class="div_row"  style="z-index: 985">
         <div class="div_row_left font_three">
             <span class="span_required">&nbsp;</span>
             <span id="spanQQ">微信号</span>
