--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/QZZP/QZZP_QZZP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/QZZP/QZZP_QZZP.cshtml
@@ -190,7 +190,7 @@
                 <div id="divLXDHTip"></div>
             </div>
         </div>
-        <div id="divQQ" class="div_row" style="">
+        <div id="divQQ" class="div_row" >
             <div class="div_row_left font_three">
                 <span class="span_required">&nbsp;</span>
                 <span id="spanQQ">微信号</span>
