--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/PFCG/PFCG_HXP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/PFCG/PFCG_HXP.cshtml
@@ -22,14 +22,14 @@
                 <div id="divBTTip"></div>
             </div>
         </div>
-        <div id="divOUTLB" class="div_row" style="z-index: 996;">
+        <div id="divLB" class="div_row" style="z-index: 996;">
             <div class="div_row_left font_two">
-                <span class="span_required">*</span>
-                <span id="spanOUTLB">类别</span>
+                <span class="span_required">&nbsp;</span>
+                <span id="spanLB">类别</span>
             </div>
-            <div id="divOUTLBText" class="div_row_right">
+            <div id="divLBText" class="div_row_right">
             </div>
-            <div id="divOUTLBTip" class="Warn" style="z-index: 998;"></div>
+            <div id="divLBTip" class="Warn" style="z-index: 995;"></div>
         </div>
         <div id="divFWFW" class="div_row" style="z-index: 984;">
             <div class="div_row_left">
