--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/PFCG/PFCG_SCSB.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/PFCG/PFCG_SCSB.cshtml
@@ -24,7 +24,7 @@
         </div>
         <div id="divLB" class="div_row" style="z-index: 996;">
             <div class="div_row_left font_two">
-                <span class="span_required">&nbsp;</span>
+                <span class="span_required">*</span>
                 <span id="spanLB">类别</span>
             </div>
             <div id="divLBText" class="div_row_right">
