--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SWFW/SWFW_FLZX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SWFW/SWFW_FLZX.cshtml
@@ -37,7 +37,7 @@
                 </div>
                 <div id="divLYTip"></div>
             </div>
-            <div id="divLB" class="div_row" style="z-index: 998;">
+            <div id="divLB" class="div_row" style="z-index: 999;">
                 <div class="div_row_left font_two">
                     <span class="span_required">*</span><span id="spanLB"> 类别</span>
                 </div>
@@ -45,25 +45,14 @@
                 </div>
                 <div id="divLBTip"></div>
             </div>
-            <div id="divZYZH" class="div_row" style="margin-top: 22px; display: none;">
+            <div id="divFWFW" class="div_row" style="z-index: 998;">
                 <div class="div_row_left">
-                    <span class="span_required">&nbsp;</span>
-                    <span id="spanZYZH">执业证号</span>
+                    <span class="span_required">*</span>
+                    <span id="spanFWFW">服务范围</span>
                 </div>
-                <div class="div_row_right">
-                    <input id="ZYZH" maxlength="50" column="ZYZH" class="input_input SRK" type="text" placeholder="吸引人的标题可让更多的人看您的信息喔" />
-                    <div id="divZYZHTip"></div>
+                <div id="divFWFWText" class="div_row_right">
                 </div>
-            </div>
-            <div id="divZYJG" class="div_row" style="margin-top: 22px; display: none;">
-                <div class="div_row_left">
-                    <span class="span_required">&nbsp;</span>
-                    <span id="spanZYJG">执业机构</span>
-                </div>
-                <div class="div_row_right">
-                    <input id="ZYJG" maxlength="50" column="ZYJG" class="input_input SRK" type="text" placeholder="吸引人的标题可让更多的人看您的信息喔" />
-                    <div id="divZYJGTip"></div>
-                </div>
+                <div id="divFWFWTip" class="Warn" style="z-index: 997;"></div>
             </div>
             <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
                 <span class="span_split">服务详情</span>
