--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_TD.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FCCX/FCCX_TD.cshtml
@@ -4,6 +4,21 @@
 @section Section_Head {
     <link href="@Url.Content("~/Areas/Business/Css/CXLB/FCCX.css")" rel="stylesheet" />
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/CXLB/FCCX/FCCX_TD.js")"></script>
+    <style type="text/css">
+        .div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_right .p_li_body_left_right .span_zj {
+            font-size: 16px;
+            margin-right: 5px;
+            color: #666;
+        }
+
+        .div_body .div_body_left .ul_body_left .li_body_left .div_li_body_left_right .p_li_body_left_right .span_calc_zj {
+            font-size: 28px;
+            font-weight: 700;
+            color: #bc6ba6;
+            margin-right: 5px;
+        }
+    </style>
+
 }
 @section Section_Body {
     <div id="divCondition" class="div_condition">
