--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/SY/ChangeCity.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/SY/ChangeCity.css
@@ -15,6 +15,7 @@
 .div_head_right .div_head_right_ss .span_spaninput_out {border: none;display: block;width: 630px;height: 40px;font-size: 14px;margin-top: 10px;margin-bottom: 10px;}
 .div_head_right .div_head_right_ss .span_spaninput_out .span_spaninput_in {border: 2px solid #bc6ba6;display: inline-block;width: 500px;height: 40px;font-size: 14px;padding: 6px 12px;border-radius: 0 !important; }
 .div_head_right .div_head_right_ss .span_h.div_rowead_right_ss {font-size: 14px;color: #999;cursor: pointer;margin-left: 4px;}
+.div_head_right .div_head_right_ss .span_head_right_ss{ cursor: pointer;}
 .div_head_right .div_head_right_ss .span_head_right_ss:hover {color: #ad5b97;text-decoration: underline;}
 .div_head_right .div_head_right_ss .span_head_right_ss_split{ color: #999999;margin: 0 4px;}
 .div_head_right .div_head_right_ss .span_spaninput_out .span_ss {width: 130px;font-family: "微软雅黑";height: 40px;background: #bc6ba6;float: right;display: inline-block;color: #fff;font-size: 18px;font-weight: 700;padding: 6px 46px;cursor: pointer;}
@@ -22,10 +23,12 @@
 .div_head_right .span_fbxx {width: 180px;font-family: "微软雅黑";border: 1px solid #bc6ba6;height: 40px;background: #bc6ba6;float: left;display: inline-block;color: #fff;font-size: 16px;padding-top: 6px;text-align: center;cursor: pointer;margin-top: 10px;margin-left: 60px;}
 .div_head_right .span_fbxx:hover {background: #ad5b97;}
 
-.div_body{ background-color: #ffffff;width: 1200px;height: 1400px;margin-top: 20px;}
+.div_body{ background-color: #ffffff;width: 1200px;height: 1600px;margin-top: 20px;}
 .div_row{ width: 100%;height: 50px;border-bottom: 1px solid #eeeff1;}
 .div_row:hover{ background-color: #f8f9fa;}
-.div_row .span_zm{ background-color: #bc6ba6;color: #fff;text-align: center;display: inline-block;padding-top: 14px;font-weight: 700;height: 50px;width: 40px;}
-.div_row .span_sf{ height: 50px;padding: 16px;font-size: 16px;}
-.div_row .span_cs{ height: 50px;padding: 16px;font-size: 13px;cursor: pointer;}
+.div_row .span_zm{float: left; font-size: 16px; background-color: #bc6ba6;color: #fff;text-align: center;display: inline-block;padding-top: 14px;font-weight: 700;height: 50px;width: 40px;border-bottom: 1px solid #eeeff1;}
+.div_row .span_zm:hover{background-color: #ad5b97;}
+.div_row .span_sf{ float: left;height: 50px;padding: 14px 12px;font-size: 16px;display: inline-block;width: 75px;text-align: center;}
+.div_row .span_cs{float: left; height: 50px;padding: 16px;font-size: 13px;cursor: pointer;display: inline-block;}
+.div_row .span_cs_gd{ line-height: 25px;padding: 0 16px;font-size: 13px;cursor: pointer;}
 .div_row .span_cs:hover{ text-decoration: underline;color: #bc6ba6;}
