--- a/android_app/app/src/main/res/layout/registor.xml
+++ b/android_app/app/src/main/res/layout/registor.xml
@@ -39,6 +39,8 @@
             android:layout_marginLeft="76dp"
             android:background="@null"
             android:hint="手机号"
+            android:maxLength="11"
+            android:inputType="phone"
             android:maxLines="1"
             android:textSize="22px" />
 
@@ -46,7 +48,7 @@
             android:id="@+id/textView3"
             android:layout_width="80dp"
             android:layout_height="60dp"
-            android:hint="获取验证码"
+            android:text="获取验证码"
             android:textAlignment="center"
             android:textSize="22px" />
 
@@ -59,6 +61,7 @@
         android:background="@drawable/border"
         android:textSize="22px"
         android:maxLines="1"
+        android:inputType="number"
         android:hint="动态码" />
 
     <EditText
